@@ -13,6 +13,8 @@
  * SPDX-License-Identifier: Apache-2.0
  */
 
+
+import groovy.transform.Memoized
 import net.ltgt.gradle.errorprone.CheckSeverity
 
 import java.text.SimpleDateFormat
@@ -23,8 +25,8 @@ plugins {
   id 'com.github.ben-manes.versions' version '0.26.0'
   id 'com.github.hierynomus.license' version '0.15.0'
   id 'io.spring.dependency-management' version '1.0.8.RELEASE'
-  id 'me.champeau.gradle.jmh' version '0.4.8' apply false
-  id 'net.ltgt.errorprone' version '0.8.1'
+  id 'me.champeau.gradle.jmh' version '0.5.0' apply false
+  id 'net.ltgt.errorprone' version '1.1.1'
 }
 
 if (!JavaVersion.current().java11Compatible) {
@@ -49,7 +51,7 @@ gradle.startParameter.taskNames.each {
 }
 gradle.startParameter.taskNames = expandedTaskList.flatten()
 
-// Gets a integer command argument, passed with -Pname=x, or the defaut if not provided.
+// Gets an integer command argument, passed with -Pname=x, or the default if not provided.
 def _intCmdArg(name, defaultValue) {
   return project.hasProperty(name) ? project.property(name) as int : defaultValue
 }
@@ -98,7 +100,7 @@ allprojects {
   version = rootProject.version
 
   jacoco {
-    toolVersion = '0.8.2'
+    toolVersion = '0.8.5'
     if (project.tasks.findByName('referenceTests')) {
       applyTo referenceTests
     }
@@ -118,20 +120,14 @@ allprojects {
   targetCompatibility = 11
 
   repositories {
-    if ("$System.env.JENKINS_URL" == 'https://jenkins.pegasys.tech/') {
-      maven { url "https://nexus.int.pegasys.tech/repository/consensys-pegasys/" }
-      maven { url "https://nexus.int.pegasys.tech/repository/jcenter/" }
-      maven { url  "https://dl.bintray.com/tuweni/tuweni/" }
-    } else {
-      jcenter()
-      mavenCentral()
-      mavenLocal()
-      maven { url "https://consensys.bintray.com/pegasys-repo" }
-      maven { url  "https://dl.bintray.com/tuweni/tuweni/" }
-    }
+    jcenter()
+    mavenCentral()
+    mavenLocal()
+    maven { url "https://consensys.bintray.com/pegasys-repo" }
+    maven { url "https://repository.apache.org/content/repositories/snapshots/" }
   }
 
-  dependencies { errorprone("com.google.errorprone:error_prone_core") }
+  dependencies { errorprone "com.google.errorprone:error_prone_core" }
 
   apply plugin: 'com.diffplug.gradle.spotless'
   spotless {
@@ -195,14 +191,17 @@ allprojects {
       check('ImmutableEnumChecker', CheckSeverity.OFF)
       // This is a style check instead of an error-prone pattern.
       check('UnnecessaryParentheses', CheckSeverity.OFF)
-      // Lazy impl causes excess CPU usage O(n) of non-final fiield when it should be O(1).
-      check('FieldCanBeFinal', CheckSeverity.OFF)
 
       // This check is broken in Java 12.  See https://github.com/google/error-prone/issues/1257
-      if (JavaVersion.current().java12Compatible) {
+      if (JavaVersion.current() == JavaVersion.VERSION_12) {
         check('Finally', CheckSeverity.OFF)
       }
+      // This check is broken after Java 12.  See https://github.com/google/error-prone/issues/1352
+      if (JavaVersion.current() > JavaVersion.VERSION_12) {
+        check('TypeParameterUnusedInFormals', CheckSeverity.OFF)
+      }
 
+      check('FieldCanBeFinal', CheckSeverity.WARN)
       check('InsecureCryptoUsage', CheckSeverity.WARN)
       check('WildcardImport', CheckSeverity.WARN)
     }
@@ -236,7 +235,7 @@ allprojects {
    */
   test {
     jvmArgs = [
-      '-Xmx2g',
+      '-Xmx4g',
       '-XX:-UseGCOverheadLimit',
       // Mockito and jackson-databind do some strange reflection during tests.
       // This suppresses an illegal access warning.
@@ -285,7 +284,7 @@ task checkMavenCoordinateCollisions {
   }
 }
 
-tasks.register('checkPluginAPIChanges', DefaultTask) { }
+tasks.register('checkPluginAPIChanges', DefaultTask) {}
 checkPluginAPIChanges.dependsOn(':plugin-api:checkAPIChanges')
 check.dependsOn('checkPluginAPIChanges', 'checkMavenCoordinateCollisions')
 
@@ -312,18 +311,18 @@ subprojects {
   }
 
   task testSupportJar(type: Jar) {
-    baseName = "${project.name}-support-test"
+    archiveBaseName = "${project.name}-support-test"
     classifier = 'test-support'
     from sourceSets.testSupport.output
   }
 
   def sourceSetIsPopulated = { sourceSetName ->
     def result = project.sourceSets.names.contains(sourceSetName) && !project.sourceSets.getAt(sourceSetName).allSource.empty
-    logger.info("Project = "+ project.name + " Has Source Set (" + sourceSetName + ") = " + result + "(" + project.sourceSets.names + ")")
+    logger.info("Project = " + project.name + " Has Source Set (" + sourceSetName + ") = " + result + "(" + project.sourceSets.names + ")")
     return result
   }
 
-  if(sourceSetIsPopulated("main") || sourceSetIsPopulated("testSupport")) {
+  if (sourceSetIsPopulated("main") || sourceSetIsPopulated("testSupport")) {
     apply plugin: 'com.jfrog.bintray'
     apply plugin: 'maven-publish'
 
@@ -332,13 +331,13 @@ subprojects {
         mavenJava(MavenPublication) {
           groupId "org.hyperledger.besu.internal"
           version "${project.version}"
-          if(sourceSetIsPopulated("main")) {
+          if (sourceSetIsPopulated("main")) {
             from components.java
             artifact sourcesJar
             artifact javadocJar
           }
 
-          if(sourceSetIsPopulated("testSupport")) {
+          if (sourceSetIsPopulated("testSupport")) {
             artifact testSupportJar
           }
           versionMapping {
@@ -404,6 +403,12 @@ subprojects {
     group = "verification"
     description = "Runs the Besu integration tests"
 
+    jvmArgs = [
+      '--add-opens',
+      'java.base/java.util=ALL-UNNAMED',
+      '--add-opens',
+      'java.base/java.util.concurrent=ALL-UNNAMED'
+    ]
     testClassesDirs = sourceSets.integrationTest.output.classesDirs
     classpath = sourceSets.integrationTest.runtimeClasspath
     outputs.upToDateWhen { false }
@@ -426,6 +431,7 @@ subprojects {
       include = _strListCmdArg('include', [''])
       humanOutputFile = project.file("${project.buildDir}/reports/jmh/results.txt")
       resultFormat = 'JSON'
+      duplicateClassesStrategy = 'warn'
     }
 
     dependencies { jmh 'org.apache.logging.log4j:log4j-api' }
@@ -478,7 +484,7 @@ startScripts {
 
 
 dependencies {
-  compile project(':besu')
+  implementation project(':besu')
   errorprone 'com.google.errorprone:error_prone_core'
 }
 
@@ -501,7 +507,7 @@ distTar {
     delete fileTree(dir: 'build/distributions', include: '*.tar.gz')
   }
   compression = Compression.GZIP
-  extension = 'tar.gz'
+  archiveExtension = 'tar.gz'
 }
 
 distZip {
@@ -533,7 +539,8 @@ tasks.register("dockerDistUntar") {
 task distDocker(type: Exec) {
   dependsOn dockerDistUntar
   def dockerBuildVersion = project.hasProperty('release.releaseVersion') ? project.property('release.releaseVersion') : "${rootProject.version}"
-  def image = project.hasProperty('release.releaseVersion') ? "hyperledger/besu:" + project.property('release.releaseVersion') : "hyperledger/besu:${project.version}"
+  def imageName = "hyperledger/besu"
+  def image = "${imageName}:${dockerBuildVersion}"
   def dockerBuildDir = "build/docker-besu/"
   workingDir "${dockerBuildDir}"
 
@@ -548,11 +555,26 @@ task distDocker(type: Exec) {
   args "-c", "docker build --build-arg BUILD_DATE=${buildTime()} --build-arg VERSION=${dockerBuildVersion} --build-arg VCS_REF=${getCheckedOutGitCommitHash()} -t ${image} ."
 }
 
+task testDocker(type: Exec) {
+  dependsOn distDocker
+  def dockerReportsDir = "docker/reports/"
+  def image = project.hasProperty('release.releaseVersion') ? "hyperledger/besu:" + project.property('release.releaseVersion') : "hyperledger/besu:${project.version}"
+  workingDir "docker"
+
+  doFirst {
+    new File(dockerReportsDir).mkdir()
+  }
+
+  executable "sh"
+  args "-c", "bash test.sh ${image}"
+}
+
 task dockerUpload(type: Exec) {
   dependsOn distDocker
   def dockerBuildVersion = project.hasProperty('release.releaseVersion') ? project.property('release.releaseVersion') : "${rootProject.version}"
   def imageName = "hyperledger/besu"
-  def image = project.hasProperty('release.releaseVersion') ? "${imageName}:" + project.property('release.releaseVersion') : "${imageName}:${project.version}"
+  def azureImageName = "hyperledger.azurecr.io/besu"
+  def image = "${imageName}:${dockerBuildVersion}"
   def cmd = "docker push '${image}'"
   def additionalTags = []
 
@@ -560,13 +582,14 @@ task dockerUpload(type: Exec) {
     additionalTags.add('develop')
   }
 
-  if (! version ==~ /.*-SNAPSHOT/) {
+  if (!(dockerBuildVersion ==~ /.*-SNAPSHOT/)) {
     additionalTags.add('latest')
-    additionalTags.add(version.split(/\./)[0..1].join('.'))
+    additionalTags.add(dockerBuildVersion.split(/\./)[0..1].join('.'))
   }
 
   additionalTags.each { tag ->
     cmd += " && docker tag '${image}' '${imageName}:${tag.trim()}' && docker push '${imageName}:${tag.trim()}'"
+    cmd += " && docker tag '${image}' '${azureImageName}:${tag.trim()}' && docker push '${azureImageName}:${tag.trim()}'"
   }
   executable "sh"
   args "-c", cmd
@@ -578,7 +601,7 @@ task checkSpdxHeader(type: CheckSpdxHeader) {
   rootPath = "${projectDir}"
   spdxHeader = "* SPDX-License-Identifier: Apache-2.0"
   filesRegex = "(.*.java)|(.*.groovy)"
-  excludeRegex = "(.*generalstate/GeneralStateRegressionReferenceTest.*)|(.*generalstate/GeneralStateReferenceTest.*)|(.*blockchain/BlockchainReferenceTest.*)|(.*.gradle/.*)"
+  excludeRegex = "(.*generalstate/GeneralStateRegressionReferenceTest.*)|(.*generalstate/GeneralStateReferenceTest.*)|(.*blockchain/BlockchainReferenceTest.*)|(.*.gradle/.*)|(.*.idea/.*)"
 }
 
 task jacocoRootReport(type: org.gradle.testing.jacoco.tasks.JacocoReport) {
@@ -616,6 +639,7 @@ def buildTime() {
 
 // Takes the version, and if -SNAPSHOT is part of it replaces SNAPSHOT
 // with the git commit version.
+@Memoized
 def calculateVersion() {
   String version = rootProject.version
   if (version.endsWith("-SNAPSHOT")) {
@@ -625,25 +649,31 @@ def calculateVersion() {
 }
 
 def getCheckedOutGitCommitHash() {
-  def gitFolder = "$projectDir/.git/"
-  if (!file(gitFolder).isDirectory()) {
-    // We are in a submodule.  The file's contents are `gitdir: <gitFolder>\n`.
-    // Read the file, cut off the front, and trim the whitespace.
-    gitFolder = file(gitFolder).text.substring(8).trim() + "/"
+  try {
+    def gitFolder = "$projectDir/.git/"
+    if (!file(gitFolder).isDirectory()) {
+      // We are in a submodule.  The file's contents are `gitdir: <gitFolder>\n`.
+      // Read the file, cut off the front, and trim the whitespace.
+      gitFolder = file(gitFolder).text.substring(8).trim() + "/"
+    }
+    def takeFromHash = 8
+    /*
+     * '.git/HEAD' contains either
+     *      in case of detached head: the currently checked out commit hash
+     *      otherwise: a reference to a file containing the current commit hash
+     */
+    def head = new File(gitFolder + "HEAD").text.split(":") // .git/HEAD
+    def isCommit = head.length == 1 // e5a7c79edabbf7dd39888442df081b1c9d8e88fd
+
+    if (isCommit) return head[0].trim().take(takeFromHash) // e5a7c79edabb
+
+    def refHead = new File(gitFolder + head[1].trim()) // .git/refs/heads/master
+    refHead.text.trim().take takeFromHash
+  } catch (Exception e) {
+    logger.warn('Could not calculate git commit, using "xxxxxxxx" (run with --info for stacktrace)')
+    logger.info('Error retrieving git commit', e)
+    return "xxxxxxxx"
   }
-  def takeFromHash = 8
-  /*
-   * '.git/HEAD' contains either
-   *      in case of detached head: the currently checked out commit hash
-   *      otherwise: a reference to a file containing the current commit hash
-   */
-  def head = new File(gitFolder + "HEAD").text.split(":") // .git/HEAD
-  def isCommit = head.length == 1 // e5a7c79edabbf7dd39888442df081b1c9d8e88fd
-
-  if (isCommit) return head[0].trim().take(takeFromHash) // e5a7c79edabb
-
-  def refHead = new File(gitFolder + head[1].trim()) // .git/refs/heads/master
-  refHead.text.trim().take takeFromHash
 }
 
 tasks.register("verifyDistributions") {
@@ -669,8 +699,9 @@ bintray {
   key = bintrayKey
 
   filesSpec {
-    from distTar.destinationDir.path
-    from distZip.destinationDir.path
+    from distTar.destinationDirectory
+    from distZip.destinationDirectory
+    from file("plugin-api/build/libs/plugin-api-$version-javadoc.jar")
     into '.'
   }
 
@@ -685,3 +716,4 @@ build.dependsOn verifyDistributions
 bintrayUpload.dependsOn verifyDistributions
 bintrayUpload.mustRunAfter(distTar)
 bintrayUpload.mustRunAfter(distZip)
+bintrayUpload.mustRunAfter(javadocJar)
